packages/jsii/test/negatives/neg.submodules-must-be-camel-cased.ts
export * as Ns1 from './namespaced';
